resources/css/style.css
@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans');

html, body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  align-self: center;
  font-family: 'Alegreya Sans';
  margin: 0;
  padding: 0;
  min-height: 100%;
  background: url("../images/RoadRider.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
  background-color: orange;
}

a:-webkit-any-link {
  text-decoration: none;
}

.navBar {
  display: flex;
  height: 64px;
  width: auto;
  z-index: 10;
  background-color: silver;
  position: fixed;
  top: 0px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  border-left: solid 2px rgba(255, 144, 0, 1);
  border-bottom: solid 2px rgba(255, 144, 0, 1);
  border-right: solid rgba(255, 144, 0, 0.7);
  right: 0px;
  left: 0px;
  box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  align-items: center;
  justify-content: space-between;
}

a {
  color: white;
  text-shadow: 2px 2px 2px gray;
}

a:hover{
  text-shadow: 2px 2px 6px #ff9000,-2px -2px 6px #ff9000, -2px 2px 2px #ff9000, 2px -2px 2px #ff9000;
  font-style: italic;
}

.logo {
  display: flex;
  align-self: center;
}

.logo h1 {
  align-self: center;
  font-size: 2em;
  font-weight: normal;
  margin-right: 6px;
  font-weight: bold;
  margin: 0px 3px 0px 3px;
  padding-left: 16px;
}


.links {
  display: flex;
  justify-content: flex-end;
  align-content: center;
  font-weight: bold;
}

.links ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

.links ul li {
  display: flex;
  align-self: center;
  font-size: 1.8em;
  padding: 0 16px 0 0;
  list-style-type: none;
}

.sectionTiles {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  width: 100%;
  height: auto;
  justify-content: center;
  margin-bottom: 32px;
  padding-top: 64px;
}

.tile {
  display: flex;
  flex-direction: column;
  background-color: silver;
  margin: 32px;
  width: 320px;
  height: 320px;
  border: solid 2px white;
  border-radius: 10px;
  box-shadow: 0px 0px 20px 0px rgb(255, 248, 220);
}

.tile img {
  padding: 0px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  display: block;
  width: 100%;
  height: 210px;
}

.tileText {
  display: flex;
  flex-direction: row;
  padding: 16px;
  width: 288px;
  justify-content: center;
  align-content: center;
}

.tileText img {
  display: flex;
  max-height: 48px;
  width: auto;
  padding: 12px;
  padding-right: 0px;
}

.tileText h2 {
  align-items: center;
  display: flex;
  width: auto;
  height: 100%;
  justify-content: center;
}

.tileText a {
  display: flex;
  justify-content: center;
  word-wrap: normal;
  align-self: center;
}

.contactTileContainer {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  width: 100%;
  min-height: 100%;
  margin-top: 96px;
  margin-bottom: 32px;
  justify-content: center;
}

.contactTile {
  display: flex;
  flex-direction: row;
  padding: 16px;
  margin: 0px 16px 0px 16px;
  height: auto;
  width: auto;
  text-shadow: none;
  justify-content: flex-start;
  border: solid 2px white;
  border-radius: 10px;
  box-shadow: 0px 0px 20px 0px rgb(255, 248, 220);
  background-color: silver;
  word-break: break-all;
  font-weight: bold;
}

.contactTile img {
  display: flex;
  border-radius: 10px;
  height: 300px;
  width: auto;
}

.contactTileText {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  max-width: 100%;
}

.contactTileText h1 {
  text-decoration: underline;
  align-self: center;
  color: white;
  text-shadow: 2px 2px 2px gray;
}

.contactTileText ul {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 100%;
  width: 100%;
  text-shadow: 2px 2px 2px gray;
  font-size: 1.8em;
}

.contactTileText ul li a {
  padding-left: 8px;
  font-size: 0.8em;
}

.projectsTile {
  align-self: center;
  display: flex;
  flex-direction: column;
  padding: 16px 16px 32px 16px;
  justify-content: space-around;
  border: solid 2px white;
  border-radius: 10px;
  box-shadow: 0px 0px 20px 0px rgb(255, 248, 220);
  background-color: silver;
  margin-top: 96px;
  margin-bottom: 32px;
  max-width: 80%;
}

.projectsTile ul {
  margin: 0 32px 0 32px;
}
.projectsTile li {
  font-size: 1.3em;
  font-weight: bold;
}

.projectsTile h1 {
  color: white;
  display: flex;
  justify-content: center;
  text-decoration: underline;
  text-shadow: 2px 2px 2px gray;
}

.projectsTile h3 {
  padding: 0 32px 0 32px;
  font-weight: normal;
}

.aboutText {
  display: flex;
  flex-direction: column;
  color: white;
  height: 100%;
  width: auto;
}

.aboutText h1 {
  height: 100%;
  justify-content: center;
  align-self: center;
  text-shadow: 2px 2px 2px gray;
  margin-top: 96px;
}

